--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.github.twitter</groupId>
+    <groupId>org.webjars</groupId>
     <artifactId>bootstrap</artifactId>
-    <name>bootstrap</name>
-    <version>2.1.0</version>
+    <name>Bootstrap</name>
+    <version>2.1.1</version>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
-            <groupId>com.jquery</groupId>
+            <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
-            <version>1.7.2</version>
+            <version>1.8.2</version>
         </dependency>
     </dependencies>
 
