--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
                 <version>2.3.2</version>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>${project.basedir}/src/main/resources</directory>
+                <targetPath>${destDir}</targetPath>
+            </resource>
+        </resources>
     </build>
 
 </project>
