--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.webjars</groupId>
     <artifactId>bootstrap</artifactId>
     <name>Bootstrap</name>
-    <version>3.0.0-rc1-SNAPSHOT</version>
+    <version>3.0.0-rc1</version>
     <packaging>jar</packaging>
     <description>WebJar for Bootstrap</description>
     <url>http://webjars.org</url>
@@ -36,7 +36,7 @@
         <url>http://github.com/webjars/bootstrap</url>
         <connection>scm:git:https://github.com/webjars/bootstrap.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/bootstrap.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>bootstrap-3.0.0-rc1</tag>
     </scm>
 
     <developers>
@@ -86,8 +86,8 @@
                                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/bootstrap-${upstreamVersion}/dist" includes="js/,css/"/>
-                                    <fileset dir="${project.build.directory}/bootstrap-${upstreamVersion}/" includes="less/"/>
+                                    <fileset dir="${project.build.directory}/bootstrap-${upstreamVersion}/dist" includes="js/,css/" />
+                                    <fileset dir="${project.build.directory}/bootstrap-${upstreamVersion}/" includes="less/" />
                                 </move>
                             </target>
                         </configuration>
