--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.webjars</groupId>
     <artifactId>bootstrap</artifactId>
     <name>Bootstrap</name>
-    <version>3.3.7-SNAPSHOT</version>
+    <version>4.0.0-alpha.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>WebJar for Bootstrap</description>
     <url>http://webjars.org</url>
@@ -49,7 +49,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstreamVersion>3.3.6</upstreamVersion>
+        <upstreamVersion>4.0.0-alpha.2</upstreamVersion>
         <sourceUrl>https://github.com/twbs/bootstrap/archive</sourceUrl>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</destDir>
         <requirejs>
@@ -98,7 +98,7 @@
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
                                     <fileset dir="${project.build.directory}/bootstrap-${upstreamVersion}/dist" includes="js/,css/,fonts/" />
-                                    <fileset dir="${project.build.directory}/bootstrap-${upstreamVersion}/" includes="js/,less/" excludes="js/tests/" />
+                                    <fileset dir="${project.build.directory}/bootstrap-${upstreamVersion}/" includes="js/,scss/" excludes="js/tests/" />
                                 </move>
                             </target>
                         </configuration>
