--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.webjars</groupId>
     <artifactId>bootstrap</artifactId>
     <name>Bootstrap</name>
-    <version>4.0.1-alpha.2-SNAPSHOT</version>
+    <version>3.3.7-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>WebJar for Bootstrap</description>
     <url>http://webjars.org</url>
@@ -49,7 +49,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstreamVersion>4.0.0-alpha.2</upstreamVersion>
         <sourceUrl>https://github.com/twbs/bootstrap/archive</sourceUrl>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</destDir>
         <requirejs>
@@ -68,6 +67,20 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>com.jamesward</groupId>
+                <artifactId>unsnapshot-maven-plugin</artifactId>
+                <version>0.1</version>
+                <executions>
+                    <execution>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>unsnapshot</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>wagon-maven-plugin</artifactId>
                 <version>1.0-beta-4</version>
@@ -77,7 +90,7 @@
                         <goals><goal>download-single</goal></goals>
                         <configuration>
                             <url>${sourceUrl}</url>
-                            <fromFile>v${upstreamVersion}.zip</fromFile>
+                            <fromFile>v${version.unsnapshot}.zip</fromFile>
                             <toFile>${project.build.directory}/${project.artifactId}.zip</toFile>
                         </configuration>
                     </execution>
@@ -97,8 +110,8 @@
                                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/bootstrap-${upstreamVersion}/dist" includes="js/,css/,fonts/" />
-                                    <fileset dir="${project.build.directory}/bootstrap-${upstreamVersion}/" includes="js/,scss/" excludes="js/tests/" />
+                                    <fileset dir="${project.build.directory}/bootstrap-${version.unsnapshot}/dist" includes="js/,css/,fonts/" />
+                                    <fileset dir="${project.build.directory}/bootstrap-${version.unsnapshot}/" includes="js/,scss/" excludes="js/tests/" />
                                 </move>
                             </target>
                         </configuration>
@@ -129,7 +142,7 @@
                     <replacements>
                         <replacement>
                             <token>url\('?+\.\.\/fonts\/([^\s\)?#']+)[\?#]{0,2}([^';]*)+?'?\)</token>
-                            <value>url("#{resource['webjars:bootstrap/${project.version}/fonts/$1']}&amp;v=${upstreamVersion}&amp;#$2")</value>
+                            <value>url("#{resource['webjars:bootstrap/${project.version}/fonts/$1']}&amp;v=${version.unsnapshot}&amp;#$2")</value>
                         </replacement>
                     </replacements>
                     <regex>true</regex>
