--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.webjars</groupId>
     <artifactId>bootstrap</artifactId>
     <name>Bootstrap</name>
-    <version>4.0.0-alpha.6-1-SNAPSHOT</version>
+    <version>4.0.0-alpha.6-1</version>
     <packaging>jar</packaging>
     <description>WebJar for Bootstrap</description>
     <url>http://webjars.org</url>
@@ -36,7 +36,7 @@
         <url>http://github.com/webjars/bootstrap</url>
         <connection>scm:git:https://github.com/webjars/bootstrap.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/bootstrap.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>bootstrap-4.0.0-alpha.6-1</tag>
     </scm>
 
     <developers>
@@ -111,7 +111,7 @@
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
                                     <fileset dir="${project.build.directory}/bootstrap-${version.unrevise}/dist" />
-                                    <fileset dir="${project.build.directory}/bootstrap-${version.unrevise}/" includes="js/,less/,scss/" excludes="js/tests/"/>
+                                    <fileset dir="${project.build.directory}/bootstrap-${version.unrevise}/" includes="js/,less/,scss/" excludes="js/tests/" />
                                 </move>
                             </target>
                         </configuration>
