--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.webjars</groupId>
     <artifactId>bootstrap</artifactId>
     <name>Bootstrap</name>
-    <version>4.0.1-alpha.6-1-SNAPSHOT</version>
+    <version>4.0.0-beta-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>WebJar for Bootstrap</description>
     <url>http://webjars.org</url>
@@ -90,7 +90,7 @@
                         <goals><goal>download-single</goal></goals>
                         <configuration>
                             <url>${sourceUrl}</url>
-                            <fromFile>v${version.unrevise}.zip</fromFile>
+                            <fromFile>v${version.unsnapshot}.zip</fromFile>
                             <toFile>${project.build.directory}/${project.artifactId}.zip</toFile>
                         </configuration>
                     </execution>
@@ -110,8 +110,7 @@
                                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/bootstrap-${version.unrevise}/dist" />
-                                    <fileset dir="${project.build.directory}/bootstrap-${version.unrevise}/" includes="js/,less/,scss/" excludes="js/tests/" />
+                                    <fileset dir="${project.build.directory}/bootstrap-${version.unsnapshot}/dist" />
                                 </move>
                             </target>
                         </configuration>
