use classic popper webjar

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.webjars</groupId>
     <artifactId>bootstrap</artifactId>
     <name>Bootstrap</name>
-    <version>4.0.1-SNAPSHOT</version>
+    <version>4.0.0-1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>WebJar for Bootstrap</description>
     <url>http://webjars.org</url>
@@ -23,9 +23,9 @@
             <version>3.0.0</version>
         </dependency>
         <dependency>
-            <groupId>org.webjars.npm</groupId>
+            <groupId>org.webjars</groupId>
             <artifactId>popper.js</artifactId>
-            <version>1.11.1</version>
+            <version>1.12.9-1</version>
         </dependency>
     </dependencies>
 
@@ -63,7 +63,7 @@
                     "bootstrap-css": "css/bootstrap"
                 },
                 "shim": {
-                    "bootstrap": [ "jquery" ]
+                    "bootstrap": [ "jquery", "popper" ]
                 }
             }
         </requirejs>
@@ -95,7 +95,7 @@
                         <goals><goal>download-single</goal></goals>
                         <configuration>
                             <url>${sourceUrl}</url>
-                            <fromFile>v${version.unsnapshot}.zip</fromFile>
+                            <fromFile>v${version.unrevise}.zip</fromFile>
                             <toFile>${project.build.directory}/${project.artifactId}.zip</toFile>
                         </configuration>
                     </execution>
@@ -115,7 +115,7 @@
                                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/bootstrap-${version.unsnapshot}/dist" />
+                                    <fileset dir="${project.build.directory}/bootstrap-${version.unrevise}/dist" />
                                 </move>
                             </target>
                         </configuration>
@@ -146,7 +146,7 @@
                     <replacements>
                         <replacement>
                             <token>url\('?+\.\.\/fonts\/([^\s\)?#']+)[\?#]{0,2}([^';]*)+?'?\)</token>
-                            <value>url("#{resource['webjars:bootstrap/${project.version}/fonts/$1']}&amp;v=${version.unsnapshot}&amp;#$2")</value>
+                            <value>url("#{resource['webjars:bootstrap/${project.version}/fonts/$1']}&amp;v=${version.unrevise}&amp;#$2")</value>
                         </replacement>
                     </replacements>
                     <regex>true</regex>
