actually add scss dir - fixes #1727

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,9 @@
                                 <move todir="${destDir}">
                                     <fileset dir="${project.build.directory}/bootstrap-${version.unrevise}/dist" />
                                 </move>
+                                <move todir="${destDir}/scss">
+                                    <fileset dir="${project.build.directory}/bootstrap-${version.unrevise}/scss" />
+                                </move>
                             </target>
                         </configuration>
                     </execution>
