--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
             <groupId>org.webjars</groupId>
             <artifactId>popper.js</artifactId>
             <version>2.9.3</version>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
